[package]
name = "async_await_join_failing_futures"
version = "0.1.0"
authors = ["Tom Steavenson <tom.steavenson@metaswitch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
tokio = "0.1.22"
failure = "0.1.6"
