[package]
name = "join_failing_futures"
version = "0.1.0"
authors = ["Tom Steavenson <tom.steavenson@metaswitch.com>"]
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1.22"
failure = "0.1.6"
futures = "0.1"
