[package]
name = "serde_yaml_anchors"
version = "0.1.0"
authors = ["tarquin-the-brave <tomsteavenson@gmail.com>"]
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8.12"
serde_derive = "1.0.110"
serde = "1.0.110"
anyhow = "1.0.31"
