[package]
name = "use-statement-example"
version = "0.1.0"
authors = ["tarquin-the-brave <tomsteavenson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
schemars = "0.8.0"
itertools = "0.9.0"
serde_yaml = "0.8.13"
toml = "0.5.6"
serde = "1.0.116"
serde_json = "1.0.58"
structopt = "0.3.18"
